--- a/Hotel_Booking_Website_Starter_Code/detail.html
+++ b/Hotel_Booking_Website_Starter_Code/detail.html
@@ -4,10 +4,38 @@
     </head>
     <body>
         <div>
-        <img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/>
-        <div>Header Div:</div>
-        <div>Content Div:</div>
-        <div>Footer Div:</div>
+        <div id="header">
+            <img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/>
+            <a href="login.html" target="_blank"><span>Login</span></a> 
+        </div>
+        <div id="content">
+            <div>
+                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
+                <a href="payment.html" target="_blank"><p>Book Now</p></a>
+                <p><h3>Radisson Blu Hotel</h3></p>
+                <p>RATING</p>
+                <p>5 Star</p>
+                <p>AMENTIES</p>
+                <ul>
+                    <li>Room Service</li>
+                    <li>Restaurant</li>
+                    <li>Business Center</li>
+                    <li>Fitness Center</li>
+                    <li>Pool</li>
+                </ul>
+                <p>Description</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. ... The first line of Lorem Ipsum, "
+                    Lorem ipsum dolor sit amet.Lorem Ipsum is simply dummy text of the printing and typesetting industry. ... 
+                    The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+        <div id="footer">
+            <a href="contact.html" target="_blank"><p>Contact Us</p></a>
+            <span><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a></span>
+            <span><a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a></span>
+            <span><a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></span>
+            <p>© 2020 ROOM SERVICE PVT.LTD.</p>
+        </div>
         </div>
         </body>
     </body>
