--- a/Hotel_Booking_Website_Starter_Code/index.html
+++ b/Hotel_Booking_Website_Starter_Code/index.html
@@ -3,9 +3,28 @@
         <title>Index</title>
     </head>
     <body>
+        <div>
+        <div id="header">
         <img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/>
-        <div>Header Div:</div>
-        <div>Content Div:</div>
-        <div>Footer Div:</div>
+        <a href="login.html" target="_blank"><span>Login</span></a>  
+        </div>
+        <div id="content">
+            <p>Search Bar</p>
+             <span><a href="list.html" target="_self"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="new-delhi" height="300" width="300"></a></span>
+             <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="goa" height="300" width="300"></span>
+             <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="hyderabad" height="300" width="300"></span>
+             <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg
+                " alt="kolkata-calcutta" height="300" width="300"></span>
+                <a href="index.html"><p>View more >></p></a>
+            </div>
+
+        <div id="footer">
+         <a href="contact.html" target="_blank"><p>Contact Us</p></a>
+         <span><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a></span>
+         <span><a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a></span>
+         <span><a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></span>
+         <p>© 2020 ROOM SERVICE PVT.LTD.</p>
+        </div>
+        </div>
     </body>
 </html>   
