--- a/Hotel_Booking_Website_Starter_Code/payment.html
+++ b/Hotel_Booking_Website_Starter_Code/payment.html
@@ -5,8 +5,8 @@
     <body>
         <div>
         <div id="header">
-            <img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/>
-            <a href="payment.html" target="_blank"><p>Book Now</p></a>
+            <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/></a>
+            <a href="login.html" target="_blank"><p>Login</p></a>
         </div>
         <div id="content">
             <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
