--- a/Hotel_Booking_Website_Starter_Code/index.html
+++ b/Hotel_Booking_Website_Starter_Code/index.html
@@ -9,7 +9,10 @@
         <a href="login.html" target="_blank"><span>Login</span></a>  
         </div>
         <div id="content">
-            <p>Search Bar</p>
+            <form action="">
+                <label for="City search"></label>
+                <input type="text" placeholder="city"/>
+            </form>
              <span><a href="list.html" target="_self"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="new-delhi" height="300" width="300"></a></span>
              <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="goa" height="300" width="300"></span>
              <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="hyderabad" height="300" width="300"></span>
