--- a/Hotel_Booking_Website_Starter_Code/list.html
+++ b/Hotel_Booking_Website_Starter_Code/list.html
@@ -5,7 +5,7 @@
     <body>
         <div>
         <div id="header">
-        <img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/>
+        <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/></a>
         <a href="login.html" target="_blank"><span>Login</span></a> 
         </div>
         <div id="content">
