--- a/Hotel_Booking_Website_Starter_Code/login.html
+++ b/Hotel_Booking_Website_Starter_Code/login.html
@@ -4,7 +4,17 @@
 </head>
 <body>
     <div>
-        <div>Login</div>
+        <div>
+            <form action="index.html" method="get">
+            <label for="username">Username:</label>
+            <input type="text" name="username" id="username" placeholder="Enter Username" required>
+            <br/>
+            <label for="password">Password:</label>
+            <input type="password" placeholder="Enter Password" required>
+            <br/>
+            <input type="submit" value="Login"> 
+            </form>
+        </div>
     </div>
 </body>
 </html>
