--- a/Hotel_Booking_Website_Starter_Code/detail.html
+++ b/Hotel_Booking_Website_Starter_Code/detail.html
@@ -1,16 +1,17 @@
+<!doctype html>
 <html>
     <head>
         <title>Detail</title>
     </head>
     <body>
         <div>
-        <div id="header">
-            <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/></a>
+        <header>
+            <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="60" width="60"/></a>
             <a href="login.html" target="_blank"><span>Login</span></a> 
-        </div>
-        <div id="content">
+        </header>
+        <section>
             <div>
-                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="150" width="150" alt="Radisson Blu Hotel">
                 <form action="payment.html" method="post">
                     <label for="adult">Adults:</label>
                     <input type="number" value="1" min="1" required/>
@@ -45,14 +46,14 @@
                     Lorem ipsum dolor sit amet.Lorem Ipsum is simply dummy text of the printing and typesetting industry. ... 
                     The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet.</p>
             </div>
-        </div>
-        <div id="footer">
+        </section>
+        <footer>
             <a href="contact.html" target="_blank"><p>Contact Us</p></a>
             <span><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a></span>
             <span><a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a></span>
             <span><a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></span>
             <p>© 2020 ROOM SERVICE PVT.LTD.</p>
-        </div>
+        </footer>
         </div>
         </body>
     </body>
