--- a/Hotel_Booking_Website_Starter_Code/index.html
+++ b/Hotel_Booking_Website_Starter_Code/index.html
@@ -1,33 +1,35 @@
+<!doctype html>
 <html>
     <head>
         <title>Index</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <div>
-        <div id="header">
-        <img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/>
+        
+        <header>
+        <img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="60" width="60"/>
         <a href="login.html" target="_blank"><span>Login</span></a>  
-        </div>
-        <div id="content">
+        </header>
+        <section>
             <form action="">
                 <label for="City search"></label>
                 <input type="text" placeholder="city"/>
             </form>
-             <span><a href="list.html" target="_self"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="new-delhi" height="300" width="300"></a></span>
-             <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="goa" height="300" width="300"></span>
-             <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="hyderabad" height="300" width="300"></span>
+             <span><a href="list.html" target="_self"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="new-delhi" height="150" width="150"></a></span>
+             <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="goa" height="150" width="150"></span>
+             <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="hyderabad" height="150" width="150"></span>
              <span><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg
-                " alt="kolkata-calcutta" height="300" width="300"></span>
+                " alt="kolkata-calcutta" height="150" width="150"></span>
                 <a href="index.html"><p>View more >></p></a>
-            </div>
+        </section>
 
-        <div id="footer">
+        <footer>
          <a href="contact.html" target="_blank"><p>Contact Us</p></a>
          <span><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a></span>
          <span><a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a></span>
          <span><a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></span>
          <p>© 2020 ROOM SERVICE PVT.LTD.</p>
-        </div>
-        </div>
+        </footer>
+        
     </body>
 </html>   
