--- a/Hotel_Booking_Website_Starter_Code/list.html
+++ b/Hotel_Booking_Website_Starter_Code/list.html
@@ -1,35 +1,36 @@
+<!doctype html>
 <html>
     <head>
        <title>List</title>
     </head>
     <body>
         <div>
-        <div id="header">
-        <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/></a>
+        <header>
+        <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="60" width="60"/></a>
         <a href="login.html" target="_blank"><span>Login</span></a> 
-        </div>
-        <div id="content">
+        </header>
+        <section>
             <ul>
                 <a href="list.html"><li>List View</li></a>
                 <a href="list.html"><li>Map View</li></a>
             </ul>
             <br/>
-            <div id="Hptel">
-            <a href="detail.html" target="_blank"><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel"></a>
+            <div id="Hotel">
+            <a href="detail.html" target="_blank"><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="150" width="150" alt="Radisson Blu Hotel"></a>
             <a href="detail.html" target="_blank"><p>Radisson Blu Hotel</p></a>
             <a href="detail.html" target="_blank"><p>5 star</p></a>
             <a href="detail.html" target="_blank"><p>Delhi</p></a>
             </div>
                
             <div id="Hotel">
-                <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="The Lalit Hotel">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" height="150" width="150" alt="The Lalit Hotel">
                 <p><h3>The Lalit New-Delhi</h3></p>
                 <p>4.5 star</p>
                 <p>New Delhi</p>
                 </div>
 
                 <div id="Hotel">
-                    <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="Taj Palace">
+                    <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" height="150" width="150" alt="Taj Palace">
                     <p><h3>Taj Palace</h3></p>
                     <p>4 star</p>
                     <p>New Delhi</p>
@@ -41,14 +42,14 @@
                         </div>
     
 
-        </div>
-        <div id="footer">
+                    </section>
+        <footer>
             <a href="contact.html" target="_blank"><p>Contact Us</p></a>
          <span><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a></span>
          <span><a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a></span>
          <span><a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></span>
          <p>© 2020 ROOM SERVICE PVT.LTD.</p>
-        </div>
+        </footer>
         </div>
     </body>
 </html>  
