--- a/Hotel_Booking_Website_Starter_Code/payment.html
+++ b/Hotel_Booking_Website_Starter_Code/payment.html
@@ -1,15 +1,16 @@
+<!doctype html>
 <html>
     <head>
         <title>Payment</title>
     </head>
     <body>
         <div>
-        <div id="header">
-            <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150"/></a>
+        <header>
+            <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="60" width="60"/></a>
             <a href="login.html" target="_blank"><p>Login</p></a>
-        </div>
-        <div id="content">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
+        </header>
+        <section>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="150" width="150" alt="Radisson Blu Hotel">
             <p><h3>Radisson Blu Hotel</h3></p>
             <p>#38 of 1,289 hotels in New Delhi</p>
             <p>National Highway 8,New-Delhi 110017 India</p>
@@ -20,14 +21,14 @@
             <p><b>Tarif Breakdown:</b> Rs 1000 x 2 Adults x 5 Nights</p>
             <p><b>Total Amount:</b>Rs 10000</p>
             <a href="payment.html" target="_self"><p>Pay Now</p></a>
-        </div>
-        <div id="footer">
+        </section>
+        <footer>
             <a href="contact.html" target="_blank"><p>Contact Us</p></a>
             <span><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a></span>
             <span><a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a></span>
             <span><a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></span>
             <p>© 2020 ROOM SERVICE PVT.LTD.</p>
-        </div>
+        </footer>
         </div>
     </body>
 </html>  
