--- a/Hotel_Booking_Website_Starter_Code/detail.html
+++ b/Hotel_Booking_Website_Starter_Code/detail.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Detail</title>
+        <link rel="stylesheet" href="D:\Project Website\Hotel_Booking_Website_Starter_Code\styles\detail.css">
     </head>
     <body>
         <div>
@@ -9,9 +10,9 @@
             <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="60" width="60"/></a>
             <a href="login.html" target="_blank"><span>Login</span></a> 
         </header>
-        <section>
+        <section id="listsec">
             <div>
-                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="150" width="150" alt="Radisson Blu Hotel">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="600" width="600" alt="Radisson Blu Hotel">
                 <form action="payment.html" method="post">
                     <label for="adult">Adults:</label>
                     <input type="number" value="1" min="1" required/>
