--- a/Hotel_Booking_Website_Starter_Code/loader.html
+++ b/Hotel_Booking_Website_Starter_Code/loader.html
@@ -1,10 +1,13 @@
 <html>
 <head>
     <title>Loader</title>
+    <link rel="stylesheet" href="D:\Project Website\Hotel_Booking_Website_Starter_Code\styles\loader.css">
 </head>
 <body>
     <div>
-        <div>LOADER</div>
+        <div class="loader">
+
+        </div>
     </div>
 </body>
 </html>
