--- a/Hotel_Booking_Website_Starter_Code/contact.html
+++ b/Hotel_Booking_Website_Starter_Code/contact.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     <title>Contact</title>
+    <link rel="stylesheet" href="D:\Project Website\Hotel_Booking_Website_Starter_Code\styles\common.css">
     </head>
     <body>
         <div>
