--- a/Hotel_Booking_Website_Starter_Code/loader.html
+++ b/Hotel_Booking_Website_Starter_Code/loader.html
@@ -2,6 +2,7 @@
 <head>
     <title>Loader</title>
     <link rel="stylesheet" href="D:\Project Website\Hotel_Booking_Website_Starter_Code\styles\loader.css">
+    <link rel="stylesheet" href="D:\Project Website\Hotel_Booking_Website_Starter_Code\styles\common.css">
 </head>
 <body>
     <div>
