--- a/Hotel_Booking_Website_Starter_Code/detail.html
+++ b/Hotel_Booking_Website_Starter_Code/detail.html
@@ -3,15 +3,15 @@
     <head>
         <title>Detail</title>
         <link rel="stylesheet" href="D:\Project Website\Hotel_Booking_Website_Starter_Code\styles\detail.css">
+        <link rel="stylesheet" href="D:\Project Website\Hotel_Booking_Website_Starter_Code\styles\common.css">
     </head>
-    <body>
-        <div>
+    <body class="content">
         <header>
-            <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="60" width="60"/></a>
-            <a href="login.html" target="_blank"><span>Login</span></a> 
+            <img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="60" width="60"/>
+            <a class="span" href="login.html" target="_blank"><span class="realspan">Login</span></a>  
         </header>
         <section id="listsec">
-            <div>
+            <div>  
                 <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="600" width="600" alt="Radisson Blu Hotel">
                 <form action="payment.html" method="post">
                     <label for="adult">Adults:</label>
@@ -43,19 +43,15 @@
                     <li>Pool</li>
                 </ul>
                 <p>Description</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. ... The first line of Lorem Ipsum, "
-                    Lorem ipsum dolor sit amet.Lorem Ipsum is simply dummy text of the printing and typesetting industry. ... 
-                    The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet.</p>
+                <p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet.Lorem Ipsum is simply dummy text The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet.Lorem Ipsum is simply dummy text of the The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet.</p>
             </div>
         </section>
         <footer>
-            <a href="contact.html" target="_blank"><p>Contact Us</p></a>
-            <span><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a></span>
-            <span><a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a></span>
-            <span><a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></span>
-            <p>© 2020 ROOM SERVICE PVT.LTD.</p>
+            <a class="contact" href="contact.html" target="_blank"><p>Contact Us</p></a>
+            <p class="pf">© 2020 ROOM SERVICE PVT.LTD.</p>
+         <div class="divfoot"><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a>
+         <a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a>
+         <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></div>
         </footer>
-        </div>
-        </body>
     </body>
 </html>  
