--- a/Hotel_Booking_Website_Starter_Code/list.html
+++ b/Hotel_Booking_Website_Starter_Code/list.html
@@ -3,19 +3,19 @@
     <head>
        <title>List</title>
        <link rel="stylesheet" href="D:\Project Website\Hotel_Booking_Website_Starter_Code\styles\list.css">
+       <link rel="stylesheet" href="D:\Project Website\Hotel_Booking_Website_Starter_Code\styles\common.css">
     </head>
-    <body>
-        <div>
+    <body class="content">
         <header>
         <a href="index.html"><img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="60" width="60"/></a>
-        <a href="login.html" target="_blank"><span>Login</span></a> 
+        <a class="span" href="login.html" target="_blank"><span>Login</span></a> 
         </header>
-        <section>
-            <ul>
-                <a href="list.html"><li>List View</li></a>
-                <a href="list.html"><li>Map View</li></a>
-            </ul>
+            <div class="ul">
+                <a class="listmap" href="list.html"><div id="d1"><b>List View</b></div></a>
+                <a class="listmap" href="list.html"><div id="d1"><b>Map View</b></div></a>
+            </div>
             <br/>
+            <div class="Hcard">
             <div id="divv">
             <div id="Hotel">
             <a href="detail.html" target="_blank"><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="150" width="150" alt="Radisson Blu Hotel"></a>
@@ -42,19 +42,18 @@
                     <p>New Delhi</p>
                 </div>
             </div>
-            
+            </div>
                     <div id="Hotel">
                         <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="Map Image">
                         <p>MAP VIEW</p>
                     </div>
-         </section>
+         
         <footer>
-            <a href="contact.html" target="_blank"><p>Contact Us</p></a>
-         <span><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a></span>
-         <span><a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a></span>
-         <span><a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></span>
-         <p>© 2020 ROOM SERVICE PVT.LTD.</p>
+            <a class="contact" href="contact.html" target="_blank"><p>Contact Us</p></a>
+            <p class="pf" >© 2020 ROOM SERVICE PVT.LTD.</p>
+         <div class="divfoot"><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a>
+         <a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a>
+         <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></div>
         </footer>
-        </div>
     </body>
 </html>  
