--- a/Hotel_Booking_Website_Starter_Code/index.html
+++ b/Hotel_Booking_Website_Starter_Code/index.html
@@ -11,18 +11,38 @@
             <img src="D:\Project Website\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="60" width="60"/>
             <a class="span" href="login.html" target="_blank"><span class="realspan">Login</span></a>  
         </header>
-        <section>
             <div class="sec1" >
                     <input class="city" type="text" placeholder="city"/>
-            </div>        
-            <div class="sec2">
-            <span><a href="list.html" target="_self"><img id="hotelcard" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="new-delhi" height="150" width="150"></a></span>
-                 <span><img id="hotelcard" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="goa" height="150" width="150"></span>
-                 <span><img id="hotelcard" src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="hyderabad" height="150" width="150"></span>
-                 <span><img id="hotelcard" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="kolkata-calcutta" height="150" width="150"></span>
-            </div>
+            </div>  
+            
+      <section class="maincontainer">      
+    <div class="container">
+        <div class="cardd">   
+            <a href="list.html" target="_self"><img id="hotelcard" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="new-delhi"></a>
+            <div class="alpha">Delhi</div>
+        </div>
+    </div>      
+
+    <div class="container">
+        <div class="cardd">
+            <a href="list.html" target="_self"><img id="hotelcard" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="goa"></a>
+            <div class="alpha">Goa</div>
+           </div>    
+    </div>    
+    <div class="container">
+        <div class="cardd">    
+            <a href="list.html" target="_self"><img id="hotelcard" src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="hyderabad" ></a>
+            <div class="alpha">Hyderabad</div>
+           </div> 
+    </div>    
+    <div class="container">
+        <div class="cardd">
+            <a href="list.html" target="_self"><img id="hotelcard" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="kolkata-calcutta"></a>
+            <div class="alpha">Kolkata</div>
+        </div>    
+    </div>
+</section>
             <a class="viewmore" href="index.html"><div>View more >></div></a>
-        </section>
         <footer>
             <a class="contact" href="contact.html" target="_blank"><p>Contact Us</p></a>
             <p class="pf">© 2020 ROOM SERVICE PVT.LTD.</p>
