--- a/Hotel_Booking_Website_Starter_Code/list.html
+++ b/Hotel_Booking_Website_Starter_Code/list.html
@@ -15,45 +15,69 @@
                 <a class="listmap" href="list.html"><div id="d1"><b>Map View</b></div></a>
             </div>
             <br/>
+        <section class="sec">
             <div class="Hcard">
-            <div id="divv">
-            <div id="Hotel">
-            <a href="detail.html" target="_blank"><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="150" width="150" alt="Radisson Blu Hotel"></a>
-            <a href="detail.html" target="_blank"><p>Radisson Blu Hotel</p></a>
-            <a href="detail.html" target="_blank"><p>5 star</p></a>
-            <a href="detail.html" target="_blank"><p>Delhi</p></a>
+            <div class="div12">
+            <a href="detail.html" target="_blank"><img class="imghotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="150" width="150" alt="Radisson Blu Hotel"></a>
             </div>
+            <div class="div12">   
+            <a class="anchor" href="detail.html" target="_blank"><div><h3>Radisson Blu Hotel</h3></div></a>
+            <br/>
+            <a class="anchor" href="detail.html" target="_blank"><div>5 star</div></a>
+            <br/>
+            <a class="anchor" href="detail.html" target="_blank"><div>Delhi</div></a>
+        </div>    
+        </div>
             </div>  
-
-            <div id="divv">
-            <div id="Hotel">
-                <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" height="150" width="150" alt="The Lalit Hotel">
-                <p><h3>The Lalit New-Delhi</h3></p>
-                <p>4.5 star</p>
-                <p>New Delhi</p>
+            <div class="Hcard">
+                <div class="div12">
+                <img class="imghotel" src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="The Lalit Hotel">
+            </div>
+                <div class="div12">
+                <div><h3>The Lalit New-Delhi</h3></div>
+                <br>
+                <div>4.5 star</div>
+                <br>
+                <div>New Delhi</div>
             </div>
             </div>
-
-            <div id="divv">
-                <div id="Hotel">
-                    <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" height="150" width="150" alt="Taj Palace">
-                    <p><h3>Taj Palace</h3></p>
-                    <p>4 star</p>
-                    <p>New Delhi</p>
-                </div>
-            </div>
-            </div>
-                    <div id="Hotel">
-                        <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="Map Image">
-                        <p>MAP VIEW</p>
+        <div class="Hcard">
+            <div class="div12">
+                    <img class="imghotel" src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="Taj Palace">
                     </div>
-         
+                <div class="div12">
+                    <div><h3>Taj Palace</h3></div>
+                    <br>
+                    <div>4 star</div>
+                    <br>
+                    <div>New Delhi</div>
+            </div>
+        </div>
+    </section>
+
+    <section class="gapcreation" style="color: #e0e0e0;">
+        Dummy text
+        <br>
+ 
+    </section>
+
+    <section class="gapcreation" style="color: #e0e0e0;">
+        Dummy text
+        <br>
+ 
+    </section>
+    <section class="gapcreation" style="color: #e0e0e0;">
+        Dummy text
+        <br>
+ 
+    </section>
+          
         <footer>
             <a class="contact" href="contact.html" target="_blank"><p>Contact Us</p></a>
             <p class="pf" >© 2020 ROOM SERVICE PVT.LTD.</p>
-         <div class="divfoot"><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a>
-         <a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a>
-         <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></div>
+         <div class="divfoot"><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20px" width="22px"></a>
+         <a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20px" width="22px"></a>
+         <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20px" width="22px"></a></div>
         </footer>
     </body>
 </html>  
