--- a/Hotel_Booking_Website_Starter_Code/detail.html
+++ b/Hotel_Booking_Website_Starter_Code/detail.html
@@ -8,7 +8,8 @@
        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  
+   
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body class="content">
         <header>
@@ -83,7 +84,27 @@
             <div class="maincontainer"> 
                 <div class="container"> 
                     <div class="con1">
-                <img class="radison" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
+                      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img class="sliderimage" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="sliderimage" src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="sliderimage" src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="Third slide">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev"   href="#carouselExampleControls" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon"  aria-hidden="true"></span>
+                          <span class="sr-only" >Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
                 </div>
                 <div class="con2">
                 <form action="payment.html" method="post">
@@ -112,7 +133,13 @@
                 <div class="description">
                 <p><h3>Radisson Blu Hotel</h3></p>
                 <p class="heading">RATING</p>
-                <p>5 Star</p>
+                <p id="rating">
+                  <span class="fa fa-star checked" id="1"></span>
+                  <span class="fa fa-star checked" id="2"></span>
+                  <span class="fa fa-star checked" id="3"></span>
+                  <span class="fa fa-star checked" id="4"></span>
+                  <span class="fa fa-star checked" id="5"></span>
+                </p>
                 <p class="heading">AMENTIES</p>
                 <ul>
                     <li>Room Service</li>
