--- a/Hotel_Booking_Website_Starter_Code/list.html
+++ b/Hotel_Booking_Website_Starter_Code/list.html
@@ -8,7 +8,8 @@
        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  
+    
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body class="content">
         <header>
@@ -98,7 +99,13 @@
             <div class="div12">   
             <a class="anchor" style="text-decoration: none; color: black;" href="detail.html" target="_blank"><div><h3>Radisson Blu Hotel</h3></div></a>
             <br/>
-            <a class="anchor" style="text-decoration: none; color: black;" href="detail.html" target="_blank"><div>5 star</div></a>
+            <a class="anchor" style="text-decoration: none; color: black;" href="detail.html" target="_blank"> <div id="rating">
+              <span class="fa fa-star checked" id="1"></span>
+              <span class="fa fa-star checked" id="2"></span>
+              <span class="fa fa-star checked" id="3"></span>
+              <span class="fa fa-star checked" id="4"></span>
+              <span class="fa fa-star checked" id="5"></span>
+          </div></a>
             <br/>
             <a class="anchor" style="text-decoration: none; color: black;" href="detail.html" target="_blank"><div>Delhi</div></a>
         </div>    
@@ -111,7 +118,13 @@
                 <div class="div12">
                 <div><h3>The Lalit New-Delhi</h3></div>
                 <br>
-                <div>4.5 star</div>
+                <div id="rating">
+                  <span class="fa fa-star checked" id="1"></span>
+                  <span class="fa fa-star checked" id="2"></span>
+                  <span class="fa fa-star checked" id="3"></span>
+                  <span class="fa fa-star-half-o checked" id="4"></span>
+                  <span class="fa fa-star" id="5"></span>
+              </div>
                 <br>
                 <div>New Delhi</div>
             </div>
@@ -123,7 +136,13 @@
                 <div class="div12">
                     <div><h3>Taj Palace</h3></div>
                     <br>
-                    <div>4 star</div>
+                    <div id="rating">
+                      <span class="fa fa-star checked" id="1"></span>
+                      <span class="fa fa-star checked" id="2"></span>
+                      <span class="fa fa-star checked" id="3"></span>
+                      <span class="fa fa-star checked" id="4"></span>
+                      <span class="fa fa-star" id="5"></span>
+                  </div>
                     <br>
                     <div>New Delhi</div>
             </div>
