--- a/Hotel_Booking_Website_Starter_Code/list.html
+++ b/Hotel_Booking_Website_Starter_Code/list.html
@@ -172,16 +172,9 @@
         <br>
  
     </section>
-          
-    <footer>
-      <div class="fot">
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#example-modal-signup" id="sign-up-button">
-        Contact Us
-      </button>    
-     <div class="pf">© 2020 ROOM SERVICE PVT.LTD.</div>
-     <div class="divfoot"><a href="https://www.facebook.com" target="_blank"><img src="assests/images/facebook.png" alt="facebook" height="20" width="22"></a>
-     <a href="https://www.instagram.com" target="_blank"><img src="assests/images/instagram.png" alt="instagram" height="20" width="22"></a>
-     <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" alt="twitter" height="20" width="22"></a></div></div>
+    <footer class="footer" id="footer">
     </footer>
+    <script src="D:\Project Website\Hotel_Booking_Website_Starter_Code\scripts\common.js"></script>
+  
     </body>
 </html>  
