--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="list.html" target="_self"><img id="hotelcard"
               src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="new-delhi"></a>
           <a href="list.html" target="_self">
-            <div class="overlay">
+            <div class="overlay" onclick="addHotelToHome()">
               <div class="alpha">Delhi</div>
             </div>
           </a>
@@ -80,7 +80,7 @@
           <a href="list.html" target="_self"><img id="hotelcard"
               src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="goa"></a>
           <a href="list.html" target="_self">
-            <div class="overlay">
+            <div class="overlay" onclick="addHotelToHome()">
               <div class="alpha">Goa</div>
             </div>
           </a>
@@ -91,7 +91,7 @@
           <a href="list.html" target="_self"><img id="hotelcard"
               src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="hyderabad"></a>
           <a href="list.html" target="_self">
-            <div class="overlay">
+            <div class="overlay" onclick="addHotelToHome()">
               <div class="alpha">Hyderabad</div>
             </div>
           </a>
@@ -104,7 +104,7 @@
               alt="kolkata-calcutta"></a>
           <a href="list.html" target="_self">
             <div class="overlay">
-              <div class="alpha">kolkata</div>
+              <div class="alpha" onclick="addHotelToHome()">kolkata</div>
             </div>
           </a>
         </div>
@@ -135,6 +135,7 @@
   </footer>
   <script src="scripts\common.js"></script>
   <script src="scripts\index.js"></script>
+  <script src="scripts\list.js"></script>
 </body>
 
 </html>
