--- a/list.html
+++ b/list.html
@@ -201,7 +201,7 @@
         
   </footer>
   <script src="D:\Project Website\Hotel_Booking_Website_Starter_Code\scripts\common.js"></script>
-
+  <script src="scripts\list.js"></script>
 </body>
 
 </html>
